# djdevx

./: .gitignore  .pre-commit-config.yaml  README.md  architecture_overview.md  developer_guide.md  manual.md  prek.toml  pyproject.toml  task  zensical.toml
.agents/agents/: code-reviewer.md
.agents/skills/code-reviewer/: SKILL.md
.agents/skills/djdevx-standards/: SKILL.md
.agents/skills/update-package-versions/: SKILL.md
.agents/skills/update-prek-versions/: SKILL.md
.github/: copilot-instructions.md
.github/prompts/: django-packages.prompt.md  update-package-versions.prompt.md  update-precommit-versions.prompt.md
.github/skiils/django-package/: SKILL.md
.github/skills/django-package-researcher/: SKILL.md
.github/skills/django-packages/: SKILL.md
.github/skills/tester/: SKILL.md
.github/skills/typer-cli-writer/: SKILL.md
.github/skills/update-package-versions/: SKILL.md
.github/workflows/: docs.yml
.opencode/skills/code-reviewer/: SKILL.md
.opencode/skills/djdevx-standards/: SKILL.md
.opencode/skills/update-package-versions/: SKILL.md
.opencode/skills/update-precommit-versions/: SKILL.md
djdevx/: __main__.py  init.py  main.py  packages_envs_secrets.md  requirement.py  version.py
djdevx/backend/: __init__.py
djdevx/backend/django/: __init__.py
djdevx/create/: __init__.py  admin.py  app.py
djdevx/deployment/: __init__.py  _base.py  docker_compose.py
djdevx/feature/: __init__.py  pwa.py  startapp.py  tailwind_theme.py  tailwind_ui.py
djdevx/feature/css/: __init__.py  bootstrap.py  frankenui.py  semantic.py
djdevx/new/: __init__.py
djdevx/new/backend/: __init__.py  django.py
djdevx/templates/init/: .dockerignore  .gitignore.j2  .pre-commit-config.yaml  (+3 more)
djdevx/utils/: color_conversion.py  djdevx_config.py  file_content_change.py  os_tools.py  print_console.py  project_files.py  project_info.py
docs/: index.md
docs/cli/: manual.md
docs/developer-guide/: architecture.md  cli-architecture.md  code-standards.md  creating-a-package.md  deployment-architecture.md  package-architecture.md  pydantic-settings.md  template-system.md  testing.md  url-architecture.md
docs/user-guide/: caching.md  databases.md  deployment.md  getting-started.md  managing-features.md  managing-packages.md  managing-settings.md
templates/django_tailwind_cli/: tailwind.config.js
templates/init/: .gitignore  .gitignore.j2  .pre-commit-config.yaml  Dockerfile.j2  pyproject.toml.j2
tests/: conftest.py  test_helpers.py
tests/deployment/: test__base.py  test_docker_compose.py
tests/utils/: test_cache_tracker.py  test_database_tracker.py  test_feature_tracker.py
(+265 files in other folders)
