[tool.poetry]
name = "djdevx"
version = "0.1.0"
description = "A cli to improve the development experience for Django projects"
authors = ["Siavash Outadi <siavash.outadi@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
djdevx = "djdevx.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.15.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
