[project]
name = "djdevx"
version = "0.1.0"
description = "A cli to improve the development experience for Django projects"
authors = [
    {name = "Siavash Outadi", email = "siavash.outadi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15.1",
    "jinja2>=3.1.5",
    "pillow>=11.1.0",
    "requests>=2.32.5",
]

[project.scripts]
djdevx = "djdevx.main:app"
ddx = "djdevx.main:app"

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
