[project]
name = "djdevx"
version = "0.1.0"
description = "A cli to improve the development experience for Django projects"
authors = [
    {name = "Siavash Outadi", email = "siavash.outadi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15.1",
    "jinja2>=3.1.5",
    "pillow>=11.1.0",
    "requests>=2.32.5",
    "tomlkit>=0.13.3",
]

[project.scripts]
djdevx = "djdevx.main:app"
ddx = "djdevx.main:app"

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-xdist>=3.8.0",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
# Run tests in parallel using all available CPU cores
addopts = "-n auto --tb=short --strict-markers --disable-warnings -v"
# -n auto: Automatically detect number of CPUs and run that many workers
# --tb=short: More concise error output
# --strict-markers: Catch typos in pytest markers
# --disable-warnings: Suppress warning messages for cleaner output

# Test discovery patterns
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Optional: Add markers for test organization
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
